# esp32-server

./: .env  .gitignore  .gitmodules  Cargo.toml  SolarTrackerDB
src/: endpoints.rs  main.rs
