[package]
name = "esp32-server"
version = "0.1.0"
authors = ["Salva HG <salva.hg01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = "1.0.126"
database-lib = { path = "database-lib" }
